# Schedule-Builder

./: CMakeLists.txt  CMakeUserPresets.json  README.md  content.js  course.c  course.h  input.c  main.c  package-lock.json  package.json  schedule.c  todo.txt  tsconfig.json:Zone.Identifier  vcpkg.json
SA_Schedule_Builder/: data.txt
SA_Schedule_Builder/builder/: course.c  course.h  schedule.c  schedule.h
SA_Schedule_Builder/input/: input.c  input.h
builder/: Makefile  course.c  course.h  main  main.c  schedule.c  schedule.h
extension/: background.js  manifest.json
input/: input.c  input.h  scraper.c  scraper.h
